--- a/paper/submission/memo.qmd
+++ b/paper/submission/memo.qmd
@@ -119,7 +119,12 @@ Although there is little room for a more sufficient discussion due to the word l
 
 ## Appendices
 
-In the appendix, we added more information on the source surveys in order to give credit to data creators and enhance data-collection transparency (Appendix XXXX).
+**Table A1**
+R2 asked for additional information in Appendix A on the source data. In the appendix, we added more information on the source surveys in order to give credit to data creators and enhance data-collection transparency (Appendix XXXX).
+
+**Figure A1**
+R2 also suggested that Figure A1 is hard to read. 
+We split that figure into several panels by region to allow it to be split across pages and so expanded for legibility. 
 
 **Scaling**. 
 R1 also suggested us to consider employing the cumulative distribution function (CDF) of the normal distribution---that is, the probit transformation---as an alternative to the logistic transformation, for scaling responses on the unit interval within the DCPO framework or at least discuss the relative merits of the two in the appendix.
@@ -131,7 +136,6 @@ On the other hand, we concur with R1 that the interpretation of the probit trans
 We have added a discussion of these points to Appendix B, our summary of the DCPO model.
 Amd as the DCPO model is published as open source software on CRAN [@Solt2020a], future researchers have the option of modifying the transformation method if they see fit. 
 
-R2 suggested that Figure A1 is hard to read. 
-We split that figure into several panels by region to allow it to be split across pages and so expanded for legibility. 
+
 
 # Reference {-}
